02-minikube-ingress/minikube-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app1
  labels:
    app: nginx-app1
spec:
  replicas: 1
  template:
    metadata:
      name: nginx-app1
      labels:
        app: nginx-app1
    spec:
      containers:
        - name: nginx-app1
          image: yozu8/kubernetes-udemy:nginx-app1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
      restartPolicy: Always
  selector:
    matchLabels:
      app: nginx-app1
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-app1
  labels:
    app: nginx-app1
spec:
  selector:
    app: nginx-app1
  ports:
    - port: 80
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app2
  labels:
    app: nginx-app2
spec:
  replicas: 1
  template:
    metadata:
      name: nginx-app2
      labels:
        app: nginx-app2
    spec:
      containers:
        - name: nginx-app2
          image: yozu8/kubernetes-udemy:nginx-app2
          imagePullPolicy: Never
          ports:
            - containerPort: 80
      restartPolicy: Always
  selector:
    matchLabels:
      app: nginx-app2
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-app2
  labels:
    app: nginx-app2
spec:
  selector:
    app: nginx-app2
  ports:
    - port: 80
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: nginx.example.info
      http:
        paths:
          - path: /web1(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: nginx-app1
                port:
                  number: 80
          - path: /web2(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: nginx-app2
                port:
                  number: 80
